--- a/cs50_finance/templates/layout.html
+++ b/cs50_finance/templates/layout.html
@@ -33,23 +33,28 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a class="navbar-brand" href="{{ url_for('index') }}"><span class="blue">C</span><span class="red">$</span><span class="yellow">5</span><span class="green">0</span> <span class="red">Finance</span></a>
+                        <a class="navbar-brand" href="{{ url_for('index') }}"><span class="blue">Core-Satellite</span><span class="red"> Wealth Management</span>
                     </div>
                     <div class="collapse navbar-collapse" id="navbar">
+                        <!-- If logged in -->
                         {% if session.user_id %}
                             <ul class="nav navbar-nav">
+                                <li><a href="{{ url_for('strats') }}">Strategy</a></li>
                                 <li><a href="{{ url_for('quote') }}">Quote</a></li>
                                 <li><a href="{{ url_for('buy') }}">Buy</a></li>
                                 <li><a href="{{ url_for('sell') }}">Sell</a></li>
                                 <li><a href="{{ url_for('history') }}">History</a></li>
                             </ul>
                             <ul class="nav navbar-nav navbar-right">
-                                <!-- <li><a href="{{ url_for('scoreboard') }}">Scoreboard</a></li> -->
+                                <li><a href="{{ url_for('reload_data') }}">Data</a></li>
+                                <li><a href="{{ url_for('scoreboard') }}">Scoreboard</a></li>
                                 <li><a href="{{ url_for('logout') }}">Log Out</a></li>
                             </ul>
+
+                        <!-- If NOT logged in -->
                         {% else %}
                             <ul class="nav navbar-nav navbar-right">
-                                <!-- <li><a href="{{ url_for('scoreboard') }}">Scoreboard</a></li> -->
+                                <li><a href="{{ url_for('scoreboard') }}">Scoreboard</a></li>
                                 <li><a href="{{ url_for('register') }}">Register</a></li>
                                 <li><a href="{{ url_for('login') }}">Log In</a></li>
                             </ul>
