--- a/cs50_finance/templates/strats.html
+++ b/cs50_finance/templates/strats.html
@@ -8,7 +8,7 @@
     <form action="{{ url_for('strats') }}" method="post">
         <fieldset>
             <div class="form-group">
-                <button class="btn btn-default" type="submit">Execute Alpha 1</button>
+                <button class="btn btn-default" type="submit">strategy1</button>
             </div>
         </fieldset>
     </form>
